add done 3d cubes play

--- a/planet/index.html
+++ b/planet/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="live-controls" style="display: none;">
+  <div class="live-controls">
     <div class="btn-group-fixed">
       <div class="form-group">
         <button type="button" class="btn btn-primary" onclick="openn()">Open</button>
@@ -28,7 +28,8 @@
   <script>
     $(document).ready(function () {
       init();
-      createPlanet();
+      //createPlanet();
+      creatorDiamond();
       render();
     });
   </script>
